# serializer version: 1
# name: test_plug_device_registry_snapshot
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'config_entries_subentries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'powersensor_au',
        'aabbccddeeff',
      ),
    }),
    'labels': set({
    }),
    'manufacturer': 'Powersensor',
    'model': 'PowersensorPlug',
    'model_id': None,
    'name': 'Powersensor Plug (aabbccddeeff)',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': None,
    'sw_version': None,
    'via_device_id': None,
  })
# ---
# name: test_plug_entity_snapshot
  list([
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': <RegistryEntryDisabler.INTEGRATION: 'integration'>,
      'domain': 'sensor',
      'entity_category': None,
      'entity_id': 'sensor.powersensor_plug_aabbccddeeff_active_current',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Active Current',
      'options': dict({
      }),
      'original_device_class': <SensorDeviceClass.CURRENT: 'current'>,
      'original_icon': None,
      'original_name': 'Active Current',
      'platform': 'powersensor_au',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'active_current',
      'unique_id': 'aabbccddeeff_active_current',
      'unit_of_measurement': <UnitOfElectricCurrent.AMPERE: 'A'>,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': <RegistryEntryDisabler.INTEGRATION: 'integration'>,
      'domain': 'sensor',
      'entity_category': None,
      'entity_id': 'sensor.powersensor_plug_aabbccddeeff_apparent_current',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Apparent Current',
      'options': dict({
      }),
      'original_device_class': <SensorDeviceClass.CURRENT: 'current'>,
      'original_icon': None,
      'original_name': 'Apparent Current',
      'platform': 'powersensor_au',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'apparent_current',
      'unique_id': 'aabbccddeeff_apparent_current',
      'unit_of_measurement': <UnitOfElectricCurrent.AMPERE: 'A'>,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        'options': list([
          'appliance',
          'house_net',
          'solar',
          'unknown',
          'water',
        ]),
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'sensor.powersensor_plug_aabbccddeeff_device_role',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Device Role',
      'options': dict({
      }),
      'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
      'original_icon': None,
      'original_name': 'Device Role',
      'platform': 'powersensor_au',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'device_role',
      'unique_id': 'aabbccddeeff_device_role',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': None,
      'entity_id': 'sensor.powersensor_plug_aabbccddeeff_power',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Power',
      'options': dict({
        'sensor': dict({
          'suggested_display_precision': 1,
        }),
      }),
      'original_device_class': <SensorDeviceClass.POWER: 'power'>,
      'original_icon': None,
      'original_name': 'Power',
      'platform': 'powersensor_au',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'power',
      'unique_id': 'aabbccddeeff_power',
      'unit_of_measurement': <UnitOfPower.WATT: 'W'>,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': <RegistryEntryDisabler.INTEGRATION: 'integration'>,
      'domain': 'sensor',
      'entity_category': None,
      'entity_id': 'sensor.powersensor_plug_aabbccddeeff_reactive_current',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Reactive Current',
      'options': dict({
      }),
      'original_device_class': <SensorDeviceClass.CURRENT: 'current'>,
      'original_icon': None,
      'original_name': 'Reactive Current',
      'platform': 'powersensor_au',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'reactive_current',
      'unique_id': 'aabbccddeeff_reactive_current',
      'unit_of_measurement': <UnitOfElectricCurrent.AMPERE: 'A'>,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': None,
      'entity_id': 'sensor.powersensor_plug_aabbccddeeff_total_energy',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Total Energy',
      'options': dict({
        'sensor': dict({
          'suggested_display_precision': 2,
        }),
      }),
      'original_device_class': <SensorDeviceClass.ENERGY: 'energy'>,
      'original_icon': None,
      'original_name': 'Total Energy',
      'platform': 'powersensor_au',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'total_energy',
      'unique_id': 'aabbccddeeff_total_energy',
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': <RegistryEntryDisabler.INTEGRATION: 'integration'>,
      'domain': 'sensor',
      'entity_category': None,
      'entity_id': 'sensor.powersensor_plug_aabbccddeeff_volts',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Volts',
      'options': dict({
      }),
      'original_device_class': <SensorDeviceClass.VOLTAGE: 'voltage'>,
      'original_icon': None,
      'original_name': 'Volts',
      'platform': 'powersensor_au',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'volts',
      'unique_id': 'aabbccddeeff_volts',
      'unit_of_measurement': <UnitOfElectricPotential.VOLT: 'V'>,
    }),
  ])
# ---
# name: test_sensor_device_registry_renames_on_role[after_role]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'config_entries_subentries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'powersensor_au',
        '112233445566',
      ),
    }),
    'labels': set({
    }),
    'manufacturer': 'Powersensor',
    'model': 'PowersensorSensor',
    'model_id': None,
    'name': 'Powersensor Mains Sensor (112233445566)',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': None,
    'sw_version': None,
    'via_device_id': None,
  })
# ---
# name: test_sensor_device_registry_renames_on_role[before_role]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'config_entries_subentries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'powersensor_au',
        '112233445566',
      ),
    }),
    'labels': set({
    }),
    'manufacturer': 'Powersensor',
    'model': 'PowersensorSensor',
    'model_id': None,
    'name': 'Powersensor Sensor (112233445566)',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': None,
    'sw_version': None,
    'via_device_id': None,
  })
# ---
# name: test_sensor_housenet_state_snapshot
  dict({
    '112233445566_battery_level': StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'battery',
        'friendly_name': 'Powersensor Mains Sensor (112233445566) Battery Level',
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
        'unit_of_measurement': '%',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.powersensor_sensor_112233445566_battery_level',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': '100',
    }),
    '112233445566_device_role': StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'enum',
        'friendly_name': 'Powersensor Mains Sensor (112233445566) Device Role',
        'options': list([
          'appliance',
          'house_net',
          'solar',
          'unknown',
          'water',
        ]),
      }),
      'context': <ANY>,
      'entity_id': 'sensor.powersensor_sensor_112233445566_device_role',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'house_net',
    }),
    '112233445566_power': StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'power',
        'friendly_name': 'Powersensor Mains Sensor (112233445566) Power',
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
        'unit_of_measurement': <UnitOfPower.WATT: 'W'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.powersensor_mains_sensor_112233445566_power',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': '1500.0',
    }),
    '112233445566_rssi_ble': StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'signal_strength',
        'friendly_name': 'Powersensor Mains Sensor (112233445566) Signal strength (Bluetooth)',
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
        'unit_of_measurement': 'dB',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.powersensor_sensor_112233445566_signal_strength_bluetooth',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': '-72',
    }),
    '112233445566_total_energy': StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'energy',
        'friendly_name': 'Powersensor Mains Sensor (112233445566) Total Energy',
        'state_class': <SensorStateClass.TOTAL: 'total'>,
        'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.powersensor_mains_sensor_112233445566_total_energy',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': '5.0',
    }),
    'powersensor_au_vhh_from_grid': StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'power',
        'friendly_name': 'Powersensor Household View Power - From grid',
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
        'unit_of_measurement': <UnitOfPower.WATT: 'W'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.powersensor_household_view_power_from_grid',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': '1500',
    }),
    'powersensor_au_vhh_from_grid_summation': StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'energy',
        'friendly_name': 'Powersensor Household View Energy - From grid',
        'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
        'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.powersensor_household_view_energy_from_grid',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    'powersensor_au_vhh_home_usage': StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'power',
        'friendly_name': 'Powersensor Household View Power - Home use',
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
        'unit_of_measurement': <UnitOfPower.WATT: 'W'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.powersensor_household_view_power_home_use',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': '1500',
    }),
    'powersensor_au_vhh_home_usage_summation': StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'energy',
        'friendly_name': 'Powersensor Household View Energy - Home usage',
        'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
        'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.powersensor_household_view_energy_home_usage',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
  })
# ---
# name: test_sensor_no_role_entity_snapshot
  list([
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': None,
      'entity_id': 'sensor.powersensor_sensor_112233445566_battery_level',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Battery Level',
      'options': dict({
        'sensor': dict({
          'suggested_display_precision': 0,
        }),
      }),
      'original_device_class': <SensorDeviceClass.BATTERY: 'battery'>,
      'original_icon': None,
      'original_name': 'Battery Level',
      'platform': 'powersensor_au',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'battery_level',
      'unique_id': '112233445566_battery_level',
      'unit_of_measurement': '%',
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        'options': list([
          'appliance',
          'house_net',
          'solar',
          'unknown',
          'water',
        ]),
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'sensor.powersensor_sensor_112233445566_device_role',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Device Role',
      'options': dict({
      }),
      'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
      'original_icon': None,
      'original_name': 'Device Role',
      'platform': 'powersensor_au',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'device_role',
      'unique_id': '112233445566_device_role',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'sensor.powersensor_sensor_112233445566_signal_strength_bluetooth',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Signal strength (Bluetooth)',
      'options': dict({
        'sensor': dict({
          'suggested_display_precision': 1,
        }),
      }),
      'original_device_class': <SensorDeviceClass.SIGNAL_STRENGTH: 'signal_strength'>,
      'original_icon': None,
      'original_name': 'Signal strength (Bluetooth)',
      'platform': 'powersensor_au',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'rssi_ble',
      'unique_id': '112233445566_rssi_ble',
      'unit_of_measurement': 'dB',
    }),
  ])
# ---
# name: test_vhh_full_state_snapshot
  dict({
    'powersensor_au_vhh_from_grid': StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'power',
        'friendly_name': 'Powersensor Household View Power - From grid',
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
        'unit_of_measurement': <UnitOfPower.WATT: 'W'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.powersensor_household_view_power_from_grid',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': '800',
    }),
    'powersensor_au_vhh_from_grid_summation': StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'energy',
        'friendly_name': 'Powersensor Household View Energy - From grid',
        'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
        'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.powersensor_household_view_energy_from_grid',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    'powersensor_au_vhh_home_usage': StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'power',
        'friendly_name': 'Powersensor Household View Power - Home use',
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
        'unit_of_measurement': <UnitOfPower.WATT: 'W'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.powersensor_household_view_power_home_use',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': '800',
    }),
    'powersensor_au_vhh_home_usage_summation': StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'energy',
        'friendly_name': 'Powersensor Household View Energy - Home usage',
        'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
        'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.powersensor_household_view_energy_home_usage',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    'powersensor_au_vhh_solar_generation': StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'power',
        'friendly_name': 'Powersensor Household View Power - Solar generation',
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
        'unit_of_measurement': <UnitOfPower.WATT: 'W'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.powersensor_household_view_power_solar_generation',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    'powersensor_au_vhh_solar_generation_summation': StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'energy',
        'friendly_name': 'Powersensor Household View Energy - Solar generation',
        'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
        'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.powersensor_household_view_energy_solar_generation',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    'powersensor_au_vhh_to_grid': StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'power',
        'friendly_name': 'Powersensor Household View Power - To grid',
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
        'unit_of_measurement': <UnitOfPower.WATT: 'W'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.powersensor_household_view_power_to_grid',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    'powersensor_au_vhh_to_grid_summation': StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'energy',
        'friendly_name': 'Powersensor Household View Energy - To grid',
        'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
        'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.powersensor_household_view_energy_to_grid',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
  })
# ---
